Adding CRUD Views to almost all models

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -150,7 +150,17 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AktorzyController.cs" />
+    <Compile Include="Controllers\AutorzyController.cs" />
+    <Compile Include="Controllers\CzasopismaController.cs" />
+    <Compile Include="Controllers\CzytelnicyController.cs" />
+    <Compile Include="Controllers\FilmyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KsiazkiController.cs" />
+    <Compile Include="Controllers\Prace_NaukoweController.cs" />
+    <Compile Include="Controllers\Slowa_KluczoweController.cs" />
+    <Compile Include="Controllers\WiadomosciController.cs" />
+    <Compile Include="Controllers\WydawcyController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -269,6 +279,56 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Aktorzy\Create.cshtml" />
+    <Content Include="Views\Aktorzy\Delete.cshtml" />
+    <Content Include="Views\Aktorzy\Details.cshtml" />
+    <Content Include="Views\Aktorzy\Edit.cshtml" />
+    <Content Include="Views\Aktorzy\Index.cshtml" />
+    <Content Include="Views\Autorzy\Create.cshtml" />
+    <Content Include="Views\Autorzy\Delete.cshtml" />
+    <Content Include="Views\Autorzy\Details.cshtml" />
+    <Content Include="Views\Autorzy\Edit.cshtml" />
+    <Content Include="Views\Autorzy\Index.cshtml" />
+    <Content Include="Views\Czasopisma\Create.cshtml" />
+    <Content Include="Views\Czasopisma\Delete.cshtml" />
+    <Content Include="Views\Czasopisma\Details.cshtml" />
+    <Content Include="Views\Czasopisma\Edit.cshtml" />
+    <Content Include="Views\Czasopisma\Index.cshtml" />
+    <Content Include="Views\Czytelnicy\Create.cshtml" />
+    <Content Include="Views\Czytelnicy\Delete.cshtml" />
+    <Content Include="Views\Czytelnicy\Details.cshtml" />
+    <Content Include="Views\Czytelnicy\Edit.cshtml" />
+    <Content Include="Views\Czytelnicy\Index.cshtml" />
+    <Content Include="Views\Filmy\Create.cshtml" />
+    <Content Include="Views\Filmy\Delete.cshtml" />
+    <Content Include="Views\Filmy\Details.cshtml" />
+    <Content Include="Views\Filmy\Edit.cshtml" />
+    <Content Include="Views\Filmy\Index.cshtml" />
+    <Content Include="Views\Ksiazki\Create.cshtml" />
+    <Content Include="Views\Ksiazki\Delete.cshtml" />
+    <Content Include="Views\Ksiazki\Details.cshtml" />
+    <Content Include="Views\Ksiazki\Edit.cshtml" />
+    <Content Include="Views\Ksiazki\Index.cshtml" />
+    <Content Include="Views\Prace_Naukowe\Create.cshtml" />
+    <Content Include="Views\Prace_Naukowe\Delete.cshtml" />
+    <Content Include="Views\Prace_Naukowe\Details.cshtml" />
+    <Content Include="Views\Prace_Naukowe\Edit.cshtml" />
+    <Content Include="Views\Prace_Naukowe\Index.cshtml" />
+    <Content Include="Views\Slowa_Kluczowe\Create.cshtml" />
+    <Content Include="Views\Slowa_Kluczowe\Delete.cshtml" />
+    <Content Include="Views\Slowa_Kluczowe\Details.cshtml" />
+    <Content Include="Views\Slowa_Kluczowe\Edit.cshtml" />
+    <Content Include="Views\Slowa_Kluczowe\Index.cshtml" />
+    <Content Include="Views\Wiadomosci\Create.cshtml" />
+    <Content Include="Views\Wiadomosci\Delete.cshtml" />
+    <Content Include="Views\Wiadomosci\Details.cshtml" />
+    <Content Include="Views\Wiadomosci\Edit.cshtml" />
+    <Content Include="Views\Wiadomosci\Index.cshtml" />
+    <Content Include="Views\Wydawcy\Create.cshtml" />
+    <Content Include="Views\Wydawcy\Delete.cshtml" />
+    <Content Include="Views\Wydawcy\Details.cshtml" />
+    <Content Include="Views\Wydawcy\Edit.cshtml" />
+    <Content Include="Views\Wydawcy\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Form\" />
