Adding Rola table to database and finishing user access restrictions

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -210,6 +210,9 @@
     <Compile Include="Models\Praca_Naukowa.cs">
       <DependentUpon>ModelDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Rola.cs">
+      <DependentUpon>ModelDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Slowo_Kluczowe.cs">
       <DependentUpon>ModelDB.tt</DependentUpon>
     </Compile>
