--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Controllers\CzytelnicyController.cs" />
     <Compile Include="Controllers\FilmyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KoszykController.cs" />
     <Compile Include="Controllers\KsiazkiController.cs" />
     <Compile Include="Controllers\KontaController.cs" />
     <Compile Include="Controllers\Prace_NaukoweController.cs" />
@@ -180,6 +181,7 @@
     <Compile Include="Models\Autor.cs">
       <DependentUpon>ModelDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Rzecz.cs" />
     <Compile Include="Models\Czasopismo.cs">
       <DependentUpon>ModelDB.tt</DependentUpon>
     </Compile>
@@ -345,6 +347,7 @@
     <Content Include="Views\Konta\Login.cshtml" />
     <Content Include="Views\Konta\Register.cshtml" />
     <Content Include="Views\Konta\Dashboard.cshtml" />
+    <Content Include="Views\Koszyk\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Form\" />
